# etl-multiples-xlsx-on-1

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml
api/: index.html
data/output/: output.xlsx
docs/: index.md
search/: search_index.json
src/: main.py
src/pipeline/: extract.py  load.py  transform.py
tests/: test_pipeline.py
