[tool.poetry]
name = "etlmultiplesxlsxon1"
version = "0.1.0"
description = "ETL Project"
authors = ["venysssssssssss <shablaur7@hotmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.3"
pandas = "^2.1.4"
openpyxl = "^3.1.2"
pytest = "^7.4.4"
isort = "^5.13.2"
blue = "^0.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.taskipy.tasks]
format = "isort . && blue ."